# libsieve

./: Cargo.toml
src/: email.rs  exec.rs  lib.rs  parse.rs  sema.rs
src/email/: btv_new.rs  error.rs  header_layout.rs  mod.rs  parse.rs
src/email/headers/: address.rs  layout.rs  mod.rs
src/email/parse/: address.rs  date_time.rs  email.rs  header.rs  mod.rs
