[package]
name = "sieve"
version = "0.1.0"
authors = ["Brennan Vincent <brennan@umanwizard.com>"]
description = "Experimental interpreter for Sieve scripts (RFC 5228)"
license-file = "LICENSE"
repository = "https://github.com/umanwizard/libsieve"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.8"
memmem = "0.1.1"
nom = "5.0.1"
regex = "1.3"
regex-syntax = "0.6"
