[package]
name = "libsieve"
version = "0.1.1"
authors = ["Brennan Vincent <brennan@umanwizard.com>"]
description = "Experimental interpreter for Sieve scripts (RFC 5228)"
license = "Apache-2.0"
repository = "https://github.com/umanwizard/libsieve"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
enum-kinds = "0.5"
itertools = "0.8"
memmem = "0.1.1"
nom = "6.2"
regex = "1.3"
regex-syntax = "0.6"

[[bin]]
name = "header_layout"
path = "src/email/headers/layout.rs"
